# TFG

./: .gitignore  .gitmodules  README.md
article/: TFG_QUOTES.md  bibcite_reference-1426-BibTeX.bib  bibcite_reference-7981-BibTeX.bib
encryption_tests/: CMakeLists.txt  main.cpp
gate/: CMakeLists.txt  main.c
house_token_TFG/: house_token_TFG.kicad_pro  house_token_TFG.kicad_sch
hw/: house_token_TFG.kicad_prl  sym-lib-table
hw/libs/: raspberry_pi_pico.kicad_sym
lock/: CMakeLists.txt  main.cpp  toolchain-arm-none-eabi.cmake
lock/cmake/: MbedTLSConfigVersion.cmake  toolchain-arm-none-eabi.cmake  update_git_submodules.cmake
lock/include/: CMakeLists.txt  defines.h
lock/include/benchmark/: tests.h  timing.h
lock/include/crypto/: entrolpy_source.h
lock/include/mbedtls/: mbedtls_config.h
lock/include/pch/: pch.h
lock/include/protocol/: protocol.h  secrets.h  states.h
lock/include/state_machine/: state_machine.h
lock/include/uart/: uart.h
lock/src/: CMakeLists.txt  main.cpp
lock/src/benchmark/: tests.cpp  timing.cpp
lock/src/crypto/: entrolpy_source.cpp
lock/src/protocol/: protocol.cpp
lock/src/uart/: uart.cpp
lock/uart/: CMakeLists.txt  uart.cpp  uart.h
